# esp32-thermometer

./: .gitignore  README.md
frontend/: app.py
frontend/static/: style.css
frontend/templates/: index.html
sensor/: Cargo.toml
sensor/src/: main.rs
