[package]
name = "sensor"
version = "0.1.0"
authors = ["alogf"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dht20 = "0.1.0"
embassy-executor = { version = "0.6.1", features = ["task-arena-size-20480"] }
embassy-net = { version = "0.4.0", features = ["medium-ethernet", "proto-ipv4", "tcp", "dhcpv4"] }
embassy-sync = "0.6.0"
embassy-time = "0.3.2"
embedded-graphics = "0.8.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.5.0"
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = [ "esp32" ] }
esp-hal-embassy = { version = "0.4.0", features = [ "esp32", "integrated-timers" ] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
esp-wifi = {version = "0.10.1", features = ["esp32", "wifi", "tcp", "dhcpv4", "embassy-net"] }
format_no_std = "1.2.0"
log = { version = "0.4.22" }
smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet", "socket"] }
ssd1306 = "0.9.0"
static_cell = "2.1.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
